--- a/src/main/webapp/js/date/index.html
+++ b/src/main/webapp/js/date/index.html
@@ -7,7 +7,7 @@
       <link href="font-awesome.min.css" rel="stylesheet">
       <link rel="stylesheet" type="text/css" media="all" href="daterangepicker-bs3.css" />
       <script type="text/javascript" src="jquery-1.8.3.min.js"></script>
-      <script type="text/javascript" src="js/bootstrap.min.js"></script>
+      <script type="text/javascript" src="bootstrap.min.js"></script>
       <script type="text/javascript" src="moment.js"></script>
       <script type="text/javascript" src="daterangepicker.js"></script>
    </head>
